--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "_redirects",
+                "input": "src"
               }
             ],
             "styles": [
