--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "redditreach-frontend",
   "compatibility_date": "2026-01-10",
   "assets": {
-    "directory": "./dist/redditreach-frontend"
+    "directory": "./dist/redditreach-frontend",
+    "not_found_handling": "single-page-application"
   }
 }
